[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highland_fm_roster"
dynamic = ["version"]
description = 'A roster for Highland FM'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Abdulqadir Ahmad", email = "arfs6.mail@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/arfs6/highland_fm_roster#readme"
Issues = "https://github.com/arfs6/highland_fm_roster/issues"
Source = "https://github.com/arfs6/highland_fm_roster"

[tool.hatch.version]
path = "src/highland_fm_roster/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  # "coverage[toml]>=6.5",
  # "pytest",
  "django",
  "django-htmx",
]
[tool.hatch.envs.default.scripts]
test = "./manage.py test roster"
# test = "pytest {args:tests}"
# test-cov = "coverage run -m pytest {args:tests}"
# cov-report = [
#   "- coverage combine",
#   "coverage report",
# ]
# cov = [
#   "test-cov",
#   "cov-report",
# ]

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/highland_fm_roster tests}"

# [tool.coverage.run]
# source_pkgs = ["highland_fm_roster", "tests"]
# branch = true
# parallel = true
# omit = [
#   "src/highland_fm_roster/__about__.py",
# ]

# [tool.coverage.paths]
# highland_fm_roster = ["src/highland_fm_roster", "*/highland_fm_roster/src/highland_fm_roster"]
# tests = ["tests", "*/highland_fm_roster/tests"]

# [tool.coverage.report]
# exclude_lines = [
#   "no cov",
#   "if __name__ == .__main__.:",
#   "if TYPE_CHECKING:",
# ]
